some spacing issues

--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -46,10 +46,10 @@ header h2 + *
 li > ul, li + li
   margin-top initial
 
-header, footer
+header
   width 100%
   padding-top 2*margin
-  padding-bottom 2*margin
+  padding-bottom 3*margin
 
 nav
   line-height 2 // damian's advice
@@ -60,7 +60,7 @@ nav > ul
 
 main
   margin-top 0
-  padding-top 3*margin
+  padding-top 2*margin
 
 p
   margin-bottom 0
@@ -73,6 +73,9 @@ p
 footer
   margin-top 3*margin
   padding-top 3*margin
+  padding-bottom 3*margin
+
+
 
 
 //
